[package]
name = "sauss-cramer"
description = "Sauss-Cramer es una libreria que ayuda a resolver sistemas 2x2 y 3x3 de ecuaciones lineales, usando el metodo de reduccion de Crammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
